--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -54,7 +54,7 @@ h4 {
 h5{
   font-size: 1.8rem;
   margin: 0;
-  padding-bottom: 1.5rem;
+  // padding-bottom: 1.5rem;
 }
 h6{
   font-size: 2.6rem;
@@ -72,4 +72,5 @@ h6{
 
 @import "blocks/conteiner";
 @import "blocks/advanced";
-
+@import "blocks/loads";
+@import "blocks/loads-list";
