first complite model

--- a/src/assets/scss/blocks/loads-list.scss
+++ b/src/assets/scss/blocks/loads-list.scss
@@ -40,6 +40,7 @@
 .loads-list__btn{
     display: block;
     color: $white;
+    cursor: pointer;
     background-color: $blue;
     padding: 1rem 2rem;
     margin: 1rem;
