--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,10 +1,10 @@
 <div class="header__menu">
     <ul class="header__menu-left">
         <li class="header__menu-item">
-            <a href="#">Load Board</a>
+            <a href="index.html">Load Board</a>
         </li>
         <li class="header__menu-item">
-            <a href="#">Get a Qote</a>
+            <a href="update.html">Get a Qote</a>
         </li>
         <li class="header__menu-item">
             <a href="#">Track Shipment</a>
