--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -14,41 +14,26 @@
 
     <script src="assets/js/app.js"></script>
 
-
-    <script type="text/javascript">
-    
-        /* функция добавления ведущих нулей */
-        /* (если число меньше десяти, перед числом добавляем ноль) */
-        function zero_first_format(value)
-        {
-            if (value < 10)
-            {
-                value='0'+value;
-            }
-            return value;
+    <!-- Add loads --------- -->
+    <script>
+        function AddLoad() {
+          document.getElementById("mySidenavAdd").style.width = "67%";
         }
-    
-        /* функция получения текущей даты и времени */
-        function date_time()
-        {
-            var current_datetime = new Date();
-            var day = zero_first_format(current_datetime.getDate());
-            var month = zero_first_format(current_datetime.getMonth()+1);
-            var year = current_datetime.getFullYear();
-            var hours = zero_first_format(current_datetime.getHours());
-            var minutes = zero_first_format(current_datetime.getMinutes());
-            var seconds = zero_first_format(current_datetime.getSeconds());
-    
-            return day+"."+month+"."+year+" "+hours+":"+minutes+":"+seconds;
+        
+        function closeAdd() {
+          document.getElementById("mySidenavAdd").style.width = "0";
         }
-    
-        /* выводим текущую дату и время на сайт в блок с id "current_date_time_block" */
-        document.getElementById('loads__head_time_block').innerHTML = date_time();
-    </script>
-    <script type="text/javascript">
-        document.getElementById('loads__head-refresh').window.location.reload();
-
     </script>
 
+<!-- Load info -->
+    <script>
+        function openNav() {
+          document.getElementById("mySidenav").style.width = "67%";
+        }
+        
+        function closeNav() {
+          document.getElementById("mySidenav").style.width = "0";
+        }
+    </script>
 </body>
 </html>
