--- a/src/assets/scss/blocks/book-info.scss
+++ b/src/assets/scss/blocks/book-info.scss
@@ -1,10 +1,12 @@
 .sidenav {
-    height: 56%;
+    display: block;
+    height: 50rem;
     width: 0;
     position: fixed;
-    z-index: 1;
-    margin-top: -2rem;
+    z-index: 100;
+    // margin-top: -15rem;
     right: 2rem;
+    top: 40%;
     background-color: $white;
     overflow-x: hidden;
     transition: 0.5s;
@@ -36,8 +38,12 @@
   .loads-list--info{
       color: $red;
   }
+
+  .loads-coment{
+    margin-top: 2rem;
+  }
   
   @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
+    .sidenav {padding-top: 1rem;}
+    .sidenav a {font-size: 1rem;}
   }
