--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -16,10 +16,8 @@ html {
 
 body {
     // background-color: #181818;
-
-
     font-family: "Segoe UI","Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-    font-size: 1.4rem;
+    font-size: 1.3rem !important;
     line-height: 1.5;
     color: $gray;
 }
