--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -1,6 +1,7 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="assets/css/style.min.css">
-
+<link rel="stylesheet" href="assets/js/app.js">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <!-- Useful meta tags -->
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
