--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -15,6 +15,11 @@
     <script src="assets/js/app.js"></script>
     
 
+    <!-- burger menu  -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+      
+    
+
     <!-- Add loads --------- -->
     <script>
         function AddLoad() {
