--- a/src/assets/scss/blocks/loads-list.scss
+++ b/src/assets/scss/blocks/loads-list.scss
@@ -62,6 +62,7 @@
 
 .loads-list__btn{
     display: block;
+    min-width: 10rem;
     color: $white;
     cursor: pointer;
     background-color: $blue;
