--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -11,7 +11,6 @@
         </main>
         {{> footer }}
     </div>
-
     <script src="assets/js/app.js"></script>
     
 
@@ -45,7 +44,7 @@
     <!-- Advanced ------------------- -->
     <script>
       /**
-        * Функция Скрывает/Показывает блок 
+        * Функція скриває/показує блок 
         **/
       function showHide(element_id) {
         //Если элемент с id-шником element_id существует
@@ -59,7 +58,7 @@
             else obj.style.display = "block"; //Скрываем элемент
         }
         //Если элемент с id-шником element_id не найден, то выводим сообщение
-        else alert("Элемент с id: " + element_id + " не найден!"); 
+        else alert("Load with id: " + element_id + " doesn't exist!"); 
       } 
   </script>
 
