--- a/src/assets/scss/blocks/book-info.scss
+++ b/src/assets/scss/blocks/book-info.scss
@@ -1,6 +1,7 @@
 .sidenav {
     display: block;
     height: 50rem;
+    // ховаю весь блок в нульову ширину і відкриваю джава скріптом на 97
     width: 0;
     position: fixed;
     z-index: 100;
@@ -15,6 +16,15 @@
       padding: 5rem 2rem;
   }
   
+ // book-info__frame =====================================
+ .book-info__frame {
+  display: block;
+  background-color: aqua;
+  width: 100%;
+  height: 100%;
+  margin-top: 8rem;  
+}
+
   .closebtn {
     display: block;  
     padding: 8px 8px 8px 32px;
